hphp/hack/test/typecheck/contravariance_bad2.php.exp
File "contravariance_bad2.php", line 19, characters 34-35:
Invalid argument (Typing[4110])
File "contravariance_bad2.php", line 12, characters 40-40:
Expected I
File "contravariance_bad2.php", line 12, characters 24-25:
But got null
